{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 151,
  "lineage": "befb2129-0dec-6a4a-6e55-16fec4917311",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "db_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "192.168.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-12-27T11:23:52.215-08:00",
            "id": "projects/vibrant-crawler-372810/regions/us-central1/addresses/db-internal",
            "name": "db-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "vibrant-crawler-372810",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/addresses/db-internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "web_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "192.168.1.3",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-12-27T11:23:51.633-08:00",
            "id": "projects/vibrant-crawler-372810/regions/us-central1/addresses/web-internal",
            "name": "web-internal",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "vibrant-crawler-372810",
            "purpose": "GCE_ENDPOINT",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/addresses/web-internal",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3300-3400"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-27T11:23:37.150-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vibrant-crawler-372810/global/firewalls/db-firewall",
            "log_config": [],
            "name": "db-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
            "priority": 1000,
            "project": "vibrant-crawler-372810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/firewalls/db-firewall",
            "source_ranges": [
              "192.168.1.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "db"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-12-27T11:23:37.182-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vibrant-crawler-372810/global/firewalls/ssh-firewall",
            "log_config": [],
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
            "priority": 1000,
            "project": "vibrant-crawler-372810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/firewalls/ssh-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-12-27T11:23:37.164-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/vibrant-crawler-372810/global/firewalls/web-firewall",
            "log_config": [],
            "name": "web-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
            "priority": 1000,
            "project": "vibrant-crawler-372810",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/firewalls/web-firewall",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "db_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/zones/us-central1-a/disks/db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vibrant-crawler-372810/zones/us-central1-a/instances/db",
            "instance_id": "4895261052633544867",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "andrey:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCkWeGQkw0zYObH71vuXwfGCGA4+WCRD4bM7rID2TyMnirNmizQQ9H4B0OHN4aY3P4o2T9PgHU/bWJU5fK8PMfvK53oiy44ElJVMj1BjtEGbYaCJYtu4dy8Jy7jTrgqOAzPpZ14fUm87mu6HhhkSQffsAl7av57Lw3dPIGPOKm1/d4nvzW7mkhfsVBA0Ij5rK89K9aIkgoV11k8lJ3+CHEqDWlv3GN8b0rdiWBD0801s9s6hEyuvdTPeQKgUdHjzXt4FMrAQhT6ijAilfp5hG0HyjMjNiBoU6Y4P5U0EvTXttA5xpL96SKox5DStEWWlPxKXZgVWJu3Z8PeKSXIkxU/ andrey\n"
            },
            "metadata_fingerprint": "H5gnMue8-3g=",
            "metadata_startup_script": "#!/bin/bash\n\n# install DB\napt update\napt install -y mariadb-server\n\n# start DB\nsystemctl start mariadb\nsystemctl enable mariadb\n\nexport DBHOST=$(curl \"http://metadata.google.internal/computeMetadata/v1/instance/network-interfaces/0/ip\" -H \"Metadata-Flavor: Google\")\nexport DBNAME=wordpress\nexport DBUSER=wordpressuser\nexport DBPASS=pa3539w0rd\n\nsed -i \"s/.*bind-address.*/bind-address = ${DBHOST}/\" /etc/mysql/mariadb.conf.d/50-server.cnf\n [...]
            "name": "db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.193.12.167",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
                "network_ip": "192.168.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet",
                "subnetwork_project": "vibrant-crawler-372810"
              }
            ],
            "project": "vibrant-crawler-372810",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/zones/us-central1-a/instances/db",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db",
              "ssh"
            ],
            "tags_fingerprint": "Q35BEd4dJ4U=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.vm_image",
            "google_compute_address.db_internal",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "web_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20221213",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/zones/us-central1-a/disks/web"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/vibrant-crawler-372810/zones/us-central1-a/instances/web",
            "instance_id": "3030919696238442660",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "andrey:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAABAQCkWeGQkw0zYObH71vuXwfGCGA4+WCRD4bM7rID2TyMnirNmizQQ9H4B0OHN4aY3P4o2T9PgHU/bWJU5fK8PMfvK53oiy44ElJVMj1BjtEGbYaCJYtu4dy8Jy7jTrgqOAzPpZ14fUm87mu6HhhkSQffsAl7av57Lw3dPIGPOKm1/d4nvzW7mkhfsVBA0Ij5rK89K9aIkgoV11k8lJ3+CHEqDWlv3GN8b0rdiWBD0801s9s6hEyuvdTPeQKgUdHjzXt4FMrAQhT6ijAilfp5hG0HyjMjNiBoU6Y4P5U0EvTXttA5xpL96SKox5DStEWWlPxKXZgVWJu3Z8PeKSXIkxU/ andrey\n"
            },
            "metadata_fingerprint": "6M_sMGlJeB4=",
            "metadata_startup_script": "#!/bin/bash\n\n# install nginx and php\napt update\napt install -y nginx\napt install -y \\\n            php-curl \\\n            php-gd \\\n            php-intl \\\n            php-mbstring \\\n            php-soap \\\n            php-xml \\\n            php-xmlrpc \\\n            php-zip \\\n            php-fpm \\\n            php-mysqlnd\n\n# restart php-fpm\nsystemctl restart php7.4-fpm\n\n# configure nginx\nmkdir -p /var/www/html/wordpress\ncat \u003c [...]
            "name": "web",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.140.181",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
                "network_ip": "192.168.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet",
                "subnetwork_project": "vibrant-crawler-372810"
              }
            ],
            "project": "vibrant-crawler-372810",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/zones/us-central1-a/instances/web",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "web"
            ],
            "tags_fingerprint": "-scOMTZb4lA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "data.google_compute_image.vm_image",
            "google_compute_address.web_internal",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.my_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/vibrant-crawler-372810/global/networks/my-global-vpc",
            "mtu": 0,
            "name": "my-global-vpc",
            "project": "vibrant-crawler-372810",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-12-27T11:23:37.911-08:00",
            "gateway_address": "192.168.1.1",
            "id": "projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet",
            "ip_cidr_range": "192.168.1.0/24",
            "name": "my-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/global/networks/my-global-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "vibrant-crawler-372810",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/vibrant-crawler-372810/regions/us-central1/subnetworks/my-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}